<resources>
    <string name="app_name">Produktsuche</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notification">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_search">Suche</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_register">Registrieren</string>
    <string name="title_reserved_list">Reserviert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="item_Laden_var">Laden_Platzhalter</string>
    <string name="item_Preis_var">3,85€</string>
    <string name="item_verfügbar_var">30 Stk</string>
    <string name="item_Name">Banane</string>
    <string name="filter_stadt">Stadt</string>
    <string name="filter_preis_von">Preis von:</string>
    <string name="filter_preis_bis">Preis bis:</string>
    <string name="login_hint_Name">Name</string>
    <string name="login_hint_Pwd">Password</string>
    <string name="login_login_Btn">Login</string>
    <string name="login_register_Btn">Registrieren</string>
    <string name="login_register_hint">Noch kein Account?</string>
    <string name="registerCheckboxKäufer">Käufer</string>
    <string name="registerCheckboxVerkäufer">Verkäufer</string>
    <string name="register_hint_Pwd_Wdh">Password wiederholen</string>
    <string name="addWatchlist">Watchlist hinzufügen</string>
    <string name="anzahl">Anzahl</string>
    <string name="reserve">Reservieren</string>
    <string name="endObservation">Beobachtung beenden?</string>
    <string name="endReservation">Reservierung aufheben?</string>
    <string name="watchlist_popup_text">Produkt von der Liste entfernen?</string>
    <string name="reservedlist_popup_text">Reservierung des Produkts aufheben?</string>
    <string name="searchlist_popup_text">Produkt reservieren?</string>
</resources>