<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="de.produktsuche.ui.tabs.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/content_list" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_watchlist"
        android:name="de.produktsuche.ui.tabs.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/content_list" >
        <action
            android:id="@+id/action_navigation_watchlist_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reserved_list"
        android:name="de.produktsuche.ui.tabs.ReservedListFragment"
        android:label="@string/title_reserved_list"
        tools:layout="@layout/content_list" >
        <action
            android:id="@+id/action_navigation_reserved_list_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="de.produktsuche.ui.account.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login"
        >
        <action
            android:id="@+id/action_navigation_login_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_watchlist"
            app:destination="@id/navigation_watchlist" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_reserved_list"
            app:destination="@id/navigation_reserved_list" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="de.produktsuche.ui.account.RegistrationFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_registration">
        <action
            android:id="@+id/action_navigation_register_to_navigation_search"
            app:destination="@id/navigation_search" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_watchlist"
            app:destination="@id/navigation_watchlist" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_reserved_list"
            app:destination="@id/navigation_reserved_list" />
    </fragment>

</navigation>